# tabular-qml

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
hqnn_forge/: __init__.py
hqnn_forge/circuits/: __init__.py  hardware_efficient.py  strongly_entangling.py
hqnn_forge/encoding/: __init__.py  angle_embedding.py  iqp_embedding.py
hqnn_forge/initializers/: __init__.py  restricted_variance.py
hqnn_forge/models/: __init__.py  hybrid_classifier.py
hqnn_forge/preprocessing/: __init__.py  pca_normalizer.py
tests/: conftest.py  test_encoding.py  test_hybrid_classifier.py  test_integration.py  test_iqp_embedding.py  test_losses.py  test_preprocessing.py
